[features]
unwind = ["remoteprocess/unwind"]

[package]
name = "py-spy"
version = "0.4.1"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/py-spy"
homepage = "https://github.com/benfred/py-spy"
description = "Sampling profiler for Python programs "
readme = "README.md"
exclude = ["images/*", "test_programs/*"]
license = "MIT"
build="build.rs"
edition="2021"
autobins = false

[dependencies]
anyhow = "1"
goblin = "0.10.0"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
lru = "0.10"
num-traits = "0.2"
regex = ">=1.6.0"
tempfile = "3.6.0"
page_size = "0.6.0"
proc-maps = "0.4.0"
memmap2 = "0.9.4"
cpp_demangle = "0.4"
serde = {version="1.0", features=["rc"]}
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
remoteprocess = "0.5.1"

[dev-dependencies]
py-spy-testdata = "0.1.0"
